# jupyter-sidekick

./: .gitignore  .readthedocs.yaml  README.md  install.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  docs.yml  pr-rtd-link.yml  release.yml
docs/: architecture.md  design-decisions.md  index.md  install.md  myst.yml
frontend/: package.json  tsconfig.json
frontend/src/: stream.ts  types.ts
jupyter-config/jupyter_server_config.d/: jupyter_acp_chat.json  jupyter_sidekick.json
jupyter_acp/: __init__.py  extension.py  handlers.py
jupyter_acp_chat/: __init__.py  acp_registry.py  extension.py
jupyter_sidekick/: __init__.py  acp_client.py  acp_registry.py  env.py  extension.py  handlers.py  harness.py  manager.py
jupyterlab_acp/: acp_registry.py  handlers.py
src/: api.ts  index.ts  server.ts  stream.ts  types.ts  widget.tsx
style/: base.css
tests/: test_acp_client.py  test_acp_registry.py  test_binding.py  test_capabilities.py  test_chat_index.py  test_env_passthrough.py  test_extension.py  test_fs.py  test_handlers.py  test_harness_session.py  test_manager.py  test_permission.py  test_registry.py  test_serialize.py  test_state.py
