[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyter-acp"
version = "0.0.1"
description = "Jupyter-native access to coding agents over the Agent Client Protocol (ACP): per-chat single-agent binding."
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.10"
authors = [{ name = "Carl Boettiger", email = "cboettig@berkeley.edu" }]
keywords = ["jupyter", "jupyterlab", "acp", "agent-client-protocol", "ai"]
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "agent-client-protocol>=0.9,<0.10",
  "jupyter-server>=2.4,<3",
]

[project.optional-dependencies]
test = ["pytest>=7", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://github.com/SchmidtDSE/jupyter-acp"
Issues = "https://github.com/SchmidtDSE/jupyter-acp/issues"

[project.entry-points."jupyter_server.extension_points"]
jupyter_acp = "jupyter_acp"

[tool.hatch.build.targets.wheel]
packages = ["jupyter_acp"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter-config/jupyter_server_config.d/jupyter_acp.json" = "etc/jupyter/jupyter_server_config.d/jupyter_acp.json"
"jupyter_acp/labextension" = "share/jupyter/labextensions/jupyter-acp"
"install.json" = "share/jupyter/labextensions/jupyter-acp/install.json"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
  "jupyter_acp/labextension/static/style.js",
  "jupyter_acp/labextension/package.json",
]
skip-if-exists = ["jupyter_acp/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
# Dev build for now: build:prod trips a bug in the old license-webpack-plugin
# pinned by @jupyterlab/builder. The dev bundle is functional (unminified).
build_cmd = "build"
npm = ["jlpm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
